cm4all-workshop (5.0.1) unstable; urgency=low

  * cron: translation packet STATUS indicates error
  * cron: translation packet MESSAGE may contain error details
  * cron: enable NO_NEW_PRIVS only if enabled by translation server
  * spawn: drop JailCGI/Refence support
  * spawn: allow multiple MOUNT_TMPFS

 --   

cm4all-workshop (4.8) unstable; urgency=low

  * spawn: allow configuring an open-ended "allow_user" range
  * spawn: fix crash bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 03 Jun 2020 11:06:33 +0200

cm4all-workshop (4.7) unstable; urgency=low

  * workshop: higher log severity for plan loader errors
  * workshop: fix rate limit bug which broke resuming after the interval expired
  * spawn: forbid the clone3() system call

 -- Max Kellermann <mk@cm4all.com>  Thu, 14 May 2020 19:00:35 +0200

cm4all-workshop (4.6) unstable; urgency=low

  * work around compiler bug causing crashes on database error
  * spawn: higher OOM score adjustment for jailed processes

 -- Max Kellermann <mk@cm4all.com>  Tue, 28 Apr 2020 16:11:33 +0200

cm4all-workshop (4.5) unstable; urgency=low

  * workshop: fix assertion failure
  * work around CURL bug causing crashes

 -- Max Kellermann <mk@cm4all.com>  Sat, 22 Feb 2020 10:44:51 +0100

cm4all-workshop (4.4) unstable; urgency=low

  * spawn: support Memory{Min,Low,High,SwapMax}
  * queue: fix use-after-free bug after database disconnect
  * queue: schedule database reconnect after reconnect failure

 -- Max Kellermann <mk@cm4all.com>  Tue, 17 Dec 2019 19:48:40 +0100

cm4all-workshop (4.3) unstable; urgency=low

  * don't reconnect to database after non-fatal error
  * reject invalid UTF-8 log output
  * workshop: show plan name in log messages
  * cron: show account id in log messages

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 Oct 2019 16:01:47 +0200

cm4all-workshop (4.2) unstable; urgency=low

  * merge release 3.5
  * fix assertion failure after database error
  * debian/rules: use dh_sphinxdoc
